2008-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-03
	* bugfix: remove assert statement from
	FUShmBuffer::discardRecoEvent()

2008-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-02
	* bug fix for deregistration of client process ids

2008-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-01
	* fix registration of several EP process ids: nClients_ set to 0
	in reset(), _NOT_ ctor

2008-01-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-00
	* add 'outModId' to FUShmRecoCell
	* add outModId to interface of FUShmBuffer::writeRecoEventData()
	* add new function 'FUShmBuffer::writeErrorEventData'

2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-01
	* fix to allow for the same (raw) event to be written (reco)
	several times.

2007-12-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-00
	* add process id and timestamp for raw cells

2007-09-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-01
	* remove some unnecessary functions from FUShmBuffer
	* accomodate the allocation of several FURecoCells for one single
	event

2007-05-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* add FUShmRawCell::index_, which is not necessarily equal to
	FUShmRawCell::fuResourceId_ anymore.
	* add method FUShmRawCell::setFuResourceId(uint).
	* call cell->clear() in FUShmBuffer::releaseRawCell();
	* remove FUShmRawCell::nSkip_ and anything related.

2007-03-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-04
	* bugfix: reco and dqm cells were not 'clear'ed before being
	declared 'free'.

2007-03-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* important bug fixes!

2007-03-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* fix waitRecoRead() and waitDqmRead()
